<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e1dfb2"
    tools:context="com.mka.palnxtest.AddProductActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="38dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/input"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_weight="0.01"
                    android:paddingTop="10dp"
                    android:text="@string/action_settings" />

                <TextView
                    android:id="@+id/tv_key_AddProductActivity"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:paddingTop="10dp"
                    android:text="@string/productName" />

                <EditText
                    android:id="@+id/et_name_AddProduct"
                    android:layout_width="264dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hintName"
                    android:inputType="text|textPersonName" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:paddingTop="10dp"
                    android:text="@string/productPrice" />

                <EditText
                    android:id="@+id/et_price_AddProduct"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hintPrice"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_weight="0.02"
                    android:paddingTop="10dp"
                    android:text="@string/productLimit" />

                <EditText
                    android:id="@+id/et_limit_AddProduct"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.02"
                    android:ems="10"
                    android:hint="@string/hintLimit"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/et_desc_AddProduct"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:paddingTop="10dp"
                    android:text="@string/productDesc" />

                <EditText
                    android:id="@+id/et_desc_AddProductuctActivity"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/hintDesc"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/productUnits" />

                <EditText
                    android:id="@+id/et_units_AddProduct"
                    android:layout_width="265dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hintUnits"
                    android:inputType="number" />

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn_addProduct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/btn"
                    android:text="@string/addProduct"
                    android:textColor="#e1db74" />


            </FrameLayout>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
