<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/input"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:background="@drawable/input"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/te"
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/product_name" />

        <TextView
            android:id="@+id/tv_name_layoutProduct"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:paddingTop="5dp"
            android:text="TextView"
            android:textColor="@android:color/background_dark" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"

        >

        <LinearLayout
            android:layout_width="88dp"
            android:layout_height="match_parent"
            android:layout_weight="0.53"
            android:background="@drawable/input"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:text="@string/price" />

            <TextView
                android:id="@+id/tv_price_LayoutProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:text="TextView"
                android:textColor="@android:color/background_dark" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="127dp"
            android:layout_height="match_parent"
            android:background="@drawable/input"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:paddingStart="10dp"
                android:text="@string/units" />

            <TextView
                android:id="@+id/tv_units_LayoutProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:paddingStart="10dp"
                android:text="TextView"
                android:textColor="@android:color/background_dark" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:background="@drawable/input"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/limits" />

            <TextView
                android:id="@+id/tv_limit_LayoutProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="TextView"
                android:textColor="@android:color/background_dark" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>